<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/esqueceuSenhaScrollView">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_esqueceu_senha_dialog"
            android:id="@+id/tituloEsqueceuSenhaDialogFragment"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_esqueceu_senha_dialog"
            android:id="@+id/textoEsqueceuSenhaDialogFragment"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEsqueceuSenha"
            android:hint="@string/hint_cadastrar_email_textview"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelarButtonEsqueceuSenhaDialogFragment"
                android:text="@string/cancelar_dialog"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enviarButtonEsqueceuSenhaDialogFragment"
                android:text="@string/enviar_dialog"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>