<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingTop="60dp"
        android:paddingRight="48dp"
        android:id="@+id/layout_telaLogin">

        <ImageView
            android:id="@+id/logoMapesImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoMapesImageView"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_login_textview"
            app:boxBackgroundColor="@color/cor_container_bgcolor_textinputlayout"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconContentDescription="@string/ic_login_textview_description"
            app:startIconDrawable="@drawable/ic_account_circle_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_loginEmail"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_senha_textview"
            app:boxBackgroundColor="@color/cor_container_bgcolor_textinputlayout"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/ic_senha_textview_description"
            app:startIconDrawable="@drawable/ic_lock_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_senha"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cadastrar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cadastrar_button_label" />

            <Button
                android:id="@+id/button_entrar"
                style="@style/btn_principal"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entrar_button_label" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_esqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/esqueceu_senha_label"
            android:textColor="@color/cor_primaria_escura" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>
